<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="twitter_key">3hUL6YcIC2LDnSFOEn9iAzPok</string>
    <string name="twitter_secret">	5VIh3lQsFihrSk0ZdNClfw9zhz60rGcVTouSYt0eNXJX9oRafh</string>
    <string name="facebook_app_id">1877846545823772</string>
    <string name="app_name">GIUQ</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover">Recover</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover_password_help">We can help you recover your password using the email address linked to the account.</string>
    <string name="error_line_or_title">You must add at least one line of research and an academic title</string>
    <string name="error_password_or_email">Email or password incorrect</string>
    <string name="error_email">Email incorrect</string>
    <string name="error_password">Password must be at least 6 characters long</string>
    <string name="error_field">incorrect</string>
    <string name="error_url_cvlac">Url incorrect</string>
    <string name="sign_up">Sign Up</string>
    <string name="tell_us_more">Tell us more</string>
    <string name="im_researcher">I\'m researcher</string>
    <string name="we_are_a_research_group">We\' re a research group</string>
    <string name="new_researcher">New Researcher</string>
    <string name="add_a_profile_photo">Add a profile photo</string>
    <string name="about">About</string>
    <string name="academic">Academic</string>
    <string name="research">Research</string>
    <string name="new_research_group">New Research Group</string>
    <string name="lines_of_research">Lines of research</string>
    <string name="line_of_research">Line of research</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="lines">Lines</string>
    <string name="academic_title">Academic title</string>
    <string name="institution">Institution</string>
    <string name="graduation_date">Graduation date</string>
    <string name="academic_background">Academic background</string>
    <string name="full_name">Full name</string>
    <string name="genre">Genre</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality</string>
    <string name="category">Category</string>
    <string name="research_group">Research group</string>
    <string name="url_cvlac">URL CVLAC</string>
    <string name="choose_your_nationality">Choose your nationality</string>
    <string name="add_academic_title">Add Academic Title</string>
    <string name="add_line_of_research">Add Line of Research</string>
    <string name="agree">Agree</string>
    <string name="status">Status</string>
    <string name="name_group">Name group</string>
    <string name="acronym">Acronym</string>
    <string name="leader">Leader</string>
    <string name="members">Members</string>
    <string name="researcher">Researcher</string>
    <string name="researchers">Researchers</string>
    <string name="research_groups">Research Groups</string>
    <string name="connection_error">Connection Error</string>
    <string name="restart_application">Please restart the application</string>
    <string name="add_researcher">Add Researcher</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy">Privacy</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign out</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="done">Done</string>
    <string name="list_by">List By</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="invalid_registration">Invalid Registration</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="successful_registration_info">Now we will proceed to verify your information. In a few hours we will send you a confirmation email so that you can enter your account.</string>


    <string-array name="nationality_array">
        <item>Afghan</item>
        <item>Albanian</item>
        <item>Algerian</item>
        <item>American</item>
        <item>Angolan</item>
        <item>Argentinian</item>
        <item>Australian</item>
        <item>Austrian</item>
        <item>Bangladeshi</item>
        <item>Belarusian</item>
        <item>Belgian</item>
        <item>Bolivian</item>
        <item>Botswanan</item>
        <item>Brazilian</item>
        <item>British</item>
        <item>Bulgarian</item>
        <item>Burmese</item>
        <item>Cambodian</item>
        <item>Canadian</item>
        <item>Chilean</item>
        <item>Chinese</item>
        <item>Colombian</item>
        <item>Congolese</item>
        <item>Croatian</item>
        <item>Cuban</item>
        <item>Cypriot</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>Ecuadorian</item>
        <item>Egyptian</item>
        <item>Estonian</item>
        <item>Ethiopian</item>
        <item>Fijian</item>
        <item>Filipian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Ghanaian</item>
        <item>Greek</item>
        <item>Guatemalan</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indian</item>
        <item>Indonesian</item>
        <item>Iranian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Ivorian</item>
        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Jordanian</item>
        <item>Kazakh</item>
        <item>Kenyan</item>
        <item>Lao</item>
        <item>Latvian</item>
        <item>Lebanese</item>
        <item>Libyan</item>
        <item>Lithuanian</item>
        <item>Malagasy</item>
        <item>Malaysian</item>
        <item>Mexican</item>
        <item>Mongolian</item>
        <item>Moroccan</item>
        <item>Namibian</item>
        <item>Nepalese</item>
        <item>New Zealand</item>
        <item>Nigerian</item>
        <item>North Korean</item>
        <item>Norwegian</item>
        <item>Pakistani</item>
        <item>Palestinian</item>
        <item>Paraguayan</item>
        <item>Peruvian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Saudi Arabian</item>
        <item>Serbian</item>
        <item>Singaporean</item>
        <item>Slovakian</item>
        <item>Slovenian</item>
        <item>Somalian</item>
        <item>South African</item>
        <item>South Korean</item>
        <item>Spanish</item>
        <item>Sri Lankan</item>
        <item>Sudanese</item>
        <item>Swedish</item>
        <item>Swiss</item>
        <item>Syrian</item>
        <item>Taiwanese</item>
        <item>Tanzanian</item>
        <item>Thai</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Ugandan</item>
        <item>Ukrainian</item>
        <item>Uruguayan</item>
        <item>Venezuelan</item>
        <item>Vietnamese</item>
        <item>Yemenite</item>
        <item>Zambian</item>
        <item>Zimbabwean</item>
    </string-array>

    <string-array name="category_researcher_array">
        <item>Senior researcher</item>
        <item>Research associate</item>
        <item>Junior researcher</item>
        <item>PhD student</item>
        <item>Master student</item>
        <item>Pregrade student</item>
    </string-array>

    <string-array name="category_research_group_array">
        <item>Category A1</item>
        <item>Category A</item>
        <item>Category B</item>
        <item>Category C</item>
        <item>Category D</item>
    </string-array>


</resources>
