<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_edit_profile"
            android:icon="@drawable/ic_action_edit"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_action_privacy"
            android:title="@string/privacy" />

        <item
            android:id="@+id/menu_language"
            android:icon="@drawable/ic_action_language"
            android:title="@string/language" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/sign_out" />
    </group>
</menu>