<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/background_app"
    tools:context="co.edu.uniquindio.android.electiva.giuq.fragments.AddLineOfResearchFragment">

    <TextView
        android:id="@+id/textViewAddLineOfResearchTitle"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/font_size_textview"
        android:text="@string/add_line_of_research"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/textViewAddLineOfResearchTitle"
        app:errorTextAppearance="@style/ErrorTextInputLayout"
        app:hintTextAppearance="@style/TextViewInputLayout"
        android:id="@+id/textInputLayoutAddLineOfResearch">

        <EditText
            android:id="@+id/editTextAddLineOfResearch"
            android:layout_width="match_parent"
            android:textSize="@dimen/font_size_edittext"
            android:layout_height="wrap_content"
            android:hint="@string/line_of_research"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textViewStatusLineOfResearch"
        android:layout_width="wrap_content"
        android:textSize="@dimen/font_size_edittext"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        android:layout_below="@id/textInputLayoutAddLineOfResearch"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroupStatusLineOfResearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/textViewStatusLineOfResearch"
        android:layout_toEndOf="@+id/textViewStatusLineOfResearch"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/radioButtonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/font_size_edittext"
            android:checked="true"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/radioButtonInactive"
            android:textSize="@dimen/font_size_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/inactive" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonAddLineOfResearch"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        android:layout_below="@id/textViewStatusLineOfResearch"
        android:textSize="@dimen/font_size_button"
        android:text="@string/agree"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/buttonCancelLineOfResearch"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@android:color/white"
        android:layout_alignTop="@+id/buttonAddLineOfResearch"
        android:layout_marginEnd="20dp"
        android:textSize="@dimen/font_size_button"
        android:layout_toStartOf="@+id/buttonAddLineOfResearch"
        android:text="@string/cancel" />



</RelativeLayout>
