<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_app"
    tools:context="co.edu.uniquindio.android.electiva.giuq.fragments.AddResearcherFragment">

    <ImageView
        android:id="@+id/imageViewCloseAddResearcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:clickable="true"
        android:src="@drawable/ic_action_close" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textViewAddResearcher"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="@dimen/font_size_textview"
            android:text="@string/add_researcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView"
            android:textSize="@dimen/font_size_edittext"
            android:layout_width="wrap_content"
            android:layout_below="@id/textViewAddResearcher"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/researcher" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewResearcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:textSize="@dimen/font_size_edittext"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            android:ems="10"
            >
            <requestFocus />
        </AutoCompleteTextView>


        <Button
            android:id="@+id/buttonAddResearcher"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:layout_marginTop="40dp"
            android:layout_below="@id/autoCompleteTextViewResearcher"
            android:textSize="@dimen/font_size_button"
            android:text="@string/agree"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

</RelativeLayout>


