<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_app"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.edu.uniquindio.android.electiva.giuq.fragments.ForgotPasswordFragment">


    <ImageView
        android:id="@+id/imageViewCloseForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:clickable="true"
        android:src="@drawable/ic_action_close" />

    <TextView
        android:id="@+id/textViewRecoverPassword"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textSize="@dimen/font_size_textview"
        android:text="@string/recover_password" />

    <TextView
        android:id="@+id/textViewRecoverHelp"
        android:textSize="@dimen/font_size_body"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRecoverPassword"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/recover_password_help" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRecoverHelp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        app:hintTextAppearance="@style/TextViewInputLayout"
        android:id="@+id/textInputLayoutEmailRecover">

        <EditText
            android:id="@+id/editTextEmailRecover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonRecover"
        android:textSize="@dimen/font_size_button"
        android:text="@string/recover"
        android:background="@drawable/buttonshape"
        android:fontFamily="@string/font_family_medium"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="@dimen/margin_top_button_recover"
        android:layout_below="@+id/textInputLayoutEmailRecover"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
